# Examples-of-Design-Patterns

./: .gitignore  CMakeLists.txt  README.md  postprocess.py
.github/workflows/: c-cpp.yml
Creational/: CMakeLists.txt  Readme.md
Creational/AbstractFactory/: AbstractFactory.cpp  CMakeLists.txt  Readme.md
Creational/Builder/: Builder.cpp  Readme.md
Creational/FactoryMethod/: FactoryMethod.cpp  Readme.md
Creational/Prototype/: Prototype.cpp  Readme.md
Creational/Singleton/: Readme.md  Singleton.cpp
Structural/Adapter/: Adapter.cpp  Readme.md
Structural/Bridge/: Bridge.cpp  Readme.md
Structural/Composite/: Composite.cpp  Readme.md
Structural/Decorator/: Decorator.cpp  Readme.md
Structural/Facade/: Facade.cpp  Readme.md
Structural/FlyWeight/: FlyWeight.cpp  Readme.md
Utils/: CMakeLists.txt  Loggers.h
